MAINT-36266: Fix sending pasted image process and fix display of chat message composer on FireFox browser after pasting an image. (#378)
*Fix sending pasted image process form chat message composer:
Some images from browsers have a source url encoded to base64 format which contains characters as "+", and in cat message composer there is a shortcut for creating tasks by the "+" character so the pasted image is consider as adding a task and it throws an uncaught error, so i made sure to check whether it is an image or a simple text.
*Fix display of message composer when pasting an image on FireFox browser:
I changed the Vue js conditional rendering "v-if" to "v-show" for the element 'apps-container' since it has css transition property which crashes when adding an image in the content editable message composer of the chat.

--- a/application/src/main/webapp/css/components/messageComposer.less
+++ b/application/src/main/webapp/css/components/messageComposer.less
@@ -50,7 +50,7 @@
   }
   #messageComposerArea:focus {
     outline: none;
-    overflow:scroll;
+    overflow:auto;
     overflow-x:hidden;
     max-height:200px;
   }
